--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^12.31.0",
     "lucide-react": "^0.563.0",
     "next": "^16.1.1",
+    "next-themes": "^0.4.6",
     "nodemailer": "^7.0.13",
     "react": "19.1.0",
     "react-dom": "19.1.0",
