--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemailer": "^7.0.13",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-dropzone": "^15.0.0",
     "recharts": "^3.7.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
